<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl6"
    tools:context=".DeliverActivity">

    <include layout="@layout/activity_toolbar" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteStartLoc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/startLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:text="@string/travellingFrom" />

    <TextView
        android:id="@+id/endLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/startLoc"
        android:layout_below="@+id/autoCompleteStartLoc"
        android:layout_marginTop="41dp"
        android:text="@string/destination"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteStartLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toStartOf="@+id/places3"
        android:layout_below="@+id/startLoc"
        android:layout_centerHorizontal="true"
        android:hint="@string/startLoc" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteEndLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/autoCompleteStartLoc"
        android:layout_alignStart="@+id/autoCompleteStartLoc"
        android:layout_below="@+id/endLoc"
        android:layout_toStartOf="@+id/places4"
        android:hint="@string/endLoc" />

    <ImageView
        android:id="@+id/places3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/autoCompleteStartLoc"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/rsz_places" />

    <ImageView
        android:id="@+id/places4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/autoCompleteEndLoc"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/rsz_places" />

    <Button
        android:id="@+id/filterOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteEndLoc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/filterOrders" />

    <ListView
        android:id="@+id/listViewDeliveries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterOrderButton"
        android:focusable="true"
        android:scrollbars="vertical" />

    <ImageView
        android:id="@+id/poweredByGoogleA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/places4"
        android:layout_marginStart="9dp"
        android:layout_toEndOf="@+id/filterOrderButton"
        app:srcCompat="@drawable/powered_by_google_light" />

</RelativeLayout>